--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>No Hands Baking!</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-</head>
+    <head>
+        <title>No Hands Baking!</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
 
-<body><center>
-    <div id="test">blah blah</div>
-    <script src="index.js"></script>
-What are we baking today?
-<form><input type="text" id="webpage" value="Paste Your Link Here!"> 
-<a href="" id=""><input type="submit" id="letsGoButton" value="Let's Bake!"></a></form></center>
-</center>
-</body>
+    <body>
+        <div>
+            <div id="test">blah blah</div>
+            
+            What are we baking today?
+            <!-- <form> -->
+                <input type="text" id="webpage" value="Paste Your Link Here!"> 
+                <!-- <a href="" id=""> -->
+                <!-- <input type="submit" id="letsGoButton" value="Let's Bake!"> -->
+
+                <button id="letsGoButton">Let's Bake!</button>
+                <!-- </a> -->
+                <!-- <a href="" id="myLink">My link</a> -->
+            <!-- </form> -->
+        </div>
+
+        <script src="index.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/gh/Parking-Master/viewsource/vs.js"></script>
+        <script>
+        console.log(getSource('https://google.com'));
+        </script> -->
+    </body>
 
 </html>
