--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
         <title>No Hands Baking!</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-
+    <div id="header"><h1><div id="recipeTitle" style="display:none;">Placeholder for Entered Recipe</div></h1></div>
+    <p></p>
     <body>
         <div>
-            <div id="test">blah blah</div>
             
+            <div id="test">blah blah</div>
+            <p></p>
             What are we baking today?
             <!-- <form> -->
                 <input type="text" id="webpage" value="Paste Your Link Here!"> 
