Toggle and Styling Clean-up
Co-authored-by: Jillian Breau <jillianbreau@gmail.com>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>No Hands Baking!</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <div id="header"><h1><div id="recipeTitle" style="display:none;">Placeholder for Entered Recipe</div></h1></div>
+    <div id="header"><h1><div id="recipeTitle" class="recipeTitle">Placeholder for Entered Recipe</div></h1></div>
     <p></p>
     <body>
         <div>
