Mise En Place elaboration

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 <!-- <a href="" id="myLink">My link</a> -->
             <!-- </form> -->
         </div>
+        <div id = "miseEnPlace">1/2 cup flour<br>
+        1/2 cup sugar<br>
+        1/2 cup butter
+        <button id="lockedAndLoadedButton">Go To Instructions</button></div>
 
         <script src="index.js"></script>
         <!-- <script src="https://cdn.jsdelivr.net/gh/Parking-Master/viewsource/vs.js"></script>
