Mise En Place established

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div id="header"><h1><div id="recipeTitle" class="recipeTitle">Placeholder for Entered Recipe</div></h1></div>
     <p></p>
     <body>
-        <div>
+        <div id="recipeSelector">
             
             <div id="test">blah blah</div>
             <p></p>
@@ -22,10 +22,12 @@
                 <!-- <a href="" id="myLink">My link</a> -->
             <!-- </form> -->
         </div>
-        <div id = "miseEnPlace">1/2 cup flour<br>
-        1/2 cup sugar<br>
-        1/2 cup butter
-        <button id="lockedAndLoadedButton">Go To Instructions</button></div>
+
+            <div id = "miseEnPlace" class="miseEnPlace">1/2 cup flour<br>
+            1/2 cup sugar<br>
+            1/2 cup butter
+            <button id="lockedAndLoadedButton">Go To Instructions</button>
+            </div>
 
         <script src="index.js"></script>
         <!-- <script src="https://cdn.jsdelivr.net/gh/Parking-Master/viewsource/vs.js"></script>
