Tidied files and completed frameworks for all 3 stages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>No Hands Baking!</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
+    
     <div id="header"><h1><div id="recipeTitle" class="recipeTitle">Placeholder for Entered Recipe</div></h1></div>
     <p></p>
     <body>
@@ -12,28 +13,26 @@
             <div id="test">blah blah</div>
             <p></p>
             What are we baking today?
-            <!-- <form> -->
+
                 <input type="text" id="webpage" value="Paste Your Link Here!"> 
-                <!-- <a href="" id=""> -->
-                <!-- <input type="submit" id="letsGoButton" value="Let's Bake!"> -->
 
                 <button id="letsGoButton">Let's Bake!</button>
-                <!-- </a> -->
-                <!-- <a href="" id="myLink">My link</a> -->
-            <!-- </form> -->
         </div>
 
-            <div id = "miseEnPlace" class="miseEnPlace">1/2 cup flour<br>
+        <div id = "miseEnPlace" class="miseEnPlace">1/2 cup flour<br>
             1/2 cup sugar<br>
-            1/2 cup butter
+            1/2 cup butter<br>
             <button id="lockedAndLoadedButton">Go To Instructions</button>
-            </div>
+        </div>
+
+        <div id = "instructions" class="instructions">1. Cream butter and sugar together.<br>
+            2. Add in flour.<br>
+            3. Probably add in a liquid or something, it's giving very dry right now.<br>
+            4. Bake?<br>
+            5. Enjoy!
+        </div>
 
         <script src="index.js"></script>
-        <!-- <script src="https://cdn.jsdelivr.net/gh/Parking-Master/viewsource/vs.js"></script>
-        <script>
-        console.log(getSource('https://google.com'));
-        </script> -->
     </body>
 
 </html>
