Added Instruction Buttons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>No Hands Baking!</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    
+
     <div id="header"><h1><div id="recipeTitle" class="recipeTitle">Placeholder for Entered Recipe</div></h1></div>
     <p></p>
     <body>
@@ -29,7 +29,10 @@
             2. Add in flour.<br>
             3. Probably add in a liquid or something, it's giving very dry right now.<br>
             4. Bake?<br>
-            5. Enjoy!
+            5. Enjoy!<br>
+            <button id="previousStep">Previous</button>
+            <button id="repeatStep">Repeat</button>
+            <button id="nextStep">Next</button>
         </div>
 
         <script src="index.js"></script>
