Final Monday commit

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <div id="header"><h1><div id="recipeTitle" class="recipeTitle">Placeholder for Entered Recipe</div></h1></div>
     <p></p>
 
-    <body>
-        <div id="recipeSelector">
+        <div id="recipeSelector" class="opener">
             <p></p>
             What are we baking today?
-
+<p></p>
                 <input type="text" id="webpage" value="Paste Your Link Here!"> 
 
                 <button id="letsGoButton">Let's Bake!</button>
@@ -27,12 +26,11 @@
         
 
         <div id = "instructions" class="instructions">
-            <ul class="instructionsVisible__container__list">
-                <li class="instructionsVisible__container__list__item">1. Cream butter and sugar together.</li>
-                <li class="instructionsVisible__container__list__item">2. Add in flour.</li>
-                <li class="instructionsVisible__container__list__item">3. Probably add a liquid or something, it's giving very dry right now.</li>
-                <li class="instructionsVisible__container__list__item">4. Bake?</li>
-                <li class="instructionsVisible__container__list__item">5. Enjoy!</li>
+                <li class="instructionsVisible--container--list--item">1. Cream butter and sugar together.</li>
+                <li class="instructionsVisible--container--list--item">2. Add in flour.</li>
+                <li class="instructionsVisible--container--list--item">3. Probably add a liquid or something, it's giving very dry right now.</li>
+                <li class="instructionsVisible--container--list--item">4. Bake?</li>
+                <li class="instructionsVisible--container--list--item">5. Enjoy!</li>
               </ul>
 
             <button id="previousStep">Previous</button>
@@ -41,6 +39,5 @@
         </div>
 
         <script src="index.js"></script>
-    </body>
 <div class="footer">No Hands Baking</div>
 </html>
