--- a/index.html
+++ b/index.html
@@ -17,6 +17,33 @@
                 <button id="letsGoButton">Let's Bake!</button>
         </div>
 
+    <div id="recipeSelectionScreen" class="recipeSelectionScreen">
+<button onclick="listView()"><i class="fa fa-bars"></i> List</button> 
+<button onclick="gridView()"><i class="fa fa-th-large"></i> Grid</button> 
+
+<div class="row">
+  <div class="column" style="background-color:#aaa;">
+    <h2>Column 1</h2>
+    <p>Some text..</p>
+  </div>
+  <div class="column" style="background-color:#bbb;">
+    <h2>Column 2</h2>
+    <p>Some text..</p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="column" style="background-color:#ccc;">
+    <h2>Column 3</h2>
+    <p>Some text..</p>
+  </div>
+  <div class="column" style="background-color:#ddd;">
+    <h2>Column 4</h2>
+    <p>Some text..</p>
+  </div>
+</div>
+</div>
+
         <div id = "miseEnPlace" class="miseEnPlace">1/2 cup flour<br>
             1/2 cup sugar<br>
             1/2 cup butter<br>
