--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
-    <div id="header"><h1><div id="recipeTitle" class="recipeTitle">Placeholder for Entered Recipe</div></h1></div>
+    <div id="header" class="header"><h1><div id="recipeTitle" class="recipeTitle">No Hands Baking!</div></h1></div>
     <p></p>
+    <div class="footer">No Hands Baking</div>
 
         <div id="recipeSelector" class="opener">
             <p></p>
             What are we baking today?
 <p></p>
-                <input type="text" id="webpage" value="Paste Your Link Here!"> 
+                <input type="text" id="webpage" value="What do you want to bake?"> 
 
-                <button id="letsGoButton">Let's Bake!</button>
+                <button id="letsGoButton">Search</button>
         </div>
 
     <div id="recipeSelectionScreen" class="recipeSelectionScreen">
@@ -22,25 +23,76 @@
 <button onclick="gridView()"><i class="fa fa-th-large"></i> Grid</button> 
 
 <div class="row">
-  <div class="column" style="background-color:#aaa;">
-    <h2>Column 1</h2>
-    <p>Some text..</p>
+  <div class="column" style="background-color:#aaa;" id="Recipe1" value="">
+    <h2>Recipe 1</h2>
+    <p></p>
+    <button id="recipe1View">Read more</button>
+    <button id="recipe1Mise">Let's Bake!</button>
   </div>
-  <div class="column" style="background-color:#bbb;">
-    <h2>Column 2</h2>
-    <p>Some text..</p>
+  <div class="column" style="background-color:#bbb;" id="Recipe2" value="">
+    <h2>Recipe 2</h2>
+    <p></p>
+    <button id="recipe2View">Read more</button>
+    <button id="recipe2Mise">Let's Bake!</button>
   </div>
 </div>
 
 <div class="row">
-  <div class="column" style="background-color:#ccc;">
-    <h2>Column 3</h2>
-    <p>Some text..</p>
+  <div class="column" style="background-color:#ccc;" id="Recipe3" value="">
+    <h2>Recipe 3</h2>
+    <p></p>
+    <button id="recipe3View">Read more</button>
+    <button id="recipe3Mise">Let's Bake!</button>
   </div>
-  <div class="column" style="background-color:#ddd;">
-    <h2>Column 4</h2>
-    <p>Some text..</p>
+  <div class="column" style="background-color:#ddd;" id="Recipe4" value="">
+    <h2>Recipe 4</h2>
+    <p></p>
+    <button id="recipe4View">Read more</button>
+    <button id="recipe4Mise">Let's Bake!</button>
   </div>
+
+    <div class="row">
+  <div class="column" style="background-color:#aaa;" id="Recipe5" value="">
+    <h2>Recipe 5</h2>
+    <p></p>
+    <button id="recipe5View">Read more</button>
+    <button id="recipe5Mise">Let's Bake!</button>
+  </div>
+  <div class="column" style="background-color:#bbb;" id="Recipe6" value="">
+    <h2>Recipe 6</h2>
+    <p></p>
+    <button id="recipe6View">Read more</button>
+    <button id="recipe6Mise">Let's Bake!</button>
+  </div>
+</div>
+
+<div class="row">
+  <div class="column" style="background-color:#ccc;" id="Recipe7" value="">
+    <h2>Recipe 7</h2>
+    <p></p>
+    <button id="recipe7View">Read more</button>
+    <button id="recipe7Mise">Let's Bake!</button>
+  </div>
+  <div class="column" style="background-color:#ddd;" id="Recipe8" value="">
+    <h2>Recipe 8</h2>
+    <p></p>
+    <button id="recipe8View">Read more</button>
+    <button id="recipe8Mise">Let's Bake!</button>
+  </div>
+
+  <div class="row">
+    <div class="column" style="background-color:#ccc;" id="Recipe9" value="">
+      <h2>Recipe 9</h2>
+      <p></p>
+        <button id="recipe9View">Read more</button>
+        <button id="recipe9Mise">Let's Bake!</button>
+    </div>
+    <div class="column" style="background-color:#ddd;" id="Recipe10" value="">
+      <h2>Recipe 10</h2>
+      <p></p>
+        <button id="recipe10View">Read more</button>
+        <button id="recipe10Mise">Let's Bake!</button>
+    </div>
 </div>
 </div>
 
@@ -66,5 +118,5 @@
         </div>
 
         <script src="index.js"></script>
-<div class="footer">No Hands Baking</div>
+
 </html>
