--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <div id="header" class="header"><h1><div id="recipeTitle" class="recipeTitle">No Hands Baking!</div></h1></div>
     <p></p>
-    <div class="footer">No Hands Baking</div>
+    <div class="footer"><div id="aboutUs" class="aboutUs">
+    <button class="aboutUsButton" id="aboutUsbutton">No Hands Baking</button></div></div>
 
         <div id="recipeSelector" class="opener">
             <p></p>
@@ -19,10 +20,8 @@
         </div>
 
         <div id="recipeSelectionScreen" class="recipeSelectionScreen">
-            <button onclick="listView()"><i class="fa fa-bars"></i> List</button> 
-            <button onclick="gridView()"><i class="fa fa-th-large"></i> Grid</button> 
 
-            <div class="row">
+            <div class="wrapper">
             <div class="column" style="background-color:#aaa;" id="Recipe1" value="">
                 <h2>Recipe 1</h2>
                 <p></p>
@@ -35,9 +34,7 @@
                 <button id="recipe2View">Read more</button>
                 <button id="recipe2Mise">Let's Bake!</button>
             </div>
-            </div>
 
-            <div class="row">
             <div class="column" style="background-color:#ccc;" id="Recipe3" value="">
                 <h2>Recipe 3</h2>
                 <p></p>
@@ -51,7 +48,6 @@
                 <button id="recipe4Mise">Let's Bake!</button>
             </div>
 
-                <div class="row">
             <div class="column" style="background-color:#aaa;" id="Recipe5" value="">
                 <h2>Recipe 5</h2>
                 <p></p>
@@ -64,9 +60,7 @@
                 <button id="recipe6View">Read more</button>
                 <button id="recipe6Mise">Let's Bake!</button>
             </div>
-    </div>
 
-            <div class="row">
             <div class="column" style="background-color:#ccc;" id="Recipe7" value="">
                 <h2>Recipe 7</h2>
                 <p></p>
@@ -80,7 +74,6 @@
                 <button id="recipe8Mise">Let's Bake!</button>
             </div>
 
-            <div class="row">
                 <div class="column" style="background-color:#ccc;" id="Recipe9" value="">
                 <h2>Recipe 9</h2>
                 <p></p>
