attempt at fixing selection buttons broke grid

--- a/index.html
+++ b/index.html
@@ -22,69 +22,69 @@
         <div id="recipeSelectionScreen" class="recipeSelectionScreen">
 
             <div class="wrapper">
-            <div class="column" style="background-color:#aaa;" id="Recipe1" value="">
-                <h2>Recipe 1</h2>
+            <div class="column" style="background-color:#aaa;" value="">
+                <div class="column.title" id="Recipe1">Recipe 1</div>
                 <p></p>
-                <button id="recipe1View">Read more</button>
-                <button id="recipe1Mise">Let's Bake!</button>
+                <button id="recipe1View" class="column.readMoreButton">Read more</button></div>
+                <button id="recipe1Mise" class="column.miseButton">Let's Bake!</button></div>
             </div>
-            <div class="column" style="background-color:#bbb;" id="Recipe2" value="">
-                <h2>Recipe 2</h2>
+            <div class="column" style="background-color:#bbb;" value="">
+                <div class="column.title" id="Recipe2">Recipe 2</div>
                 <p></p>
-                <button id="recipe2View">Read more</button>
-                <button id="recipe2Mise">Let's Bake!</button>
-            </div>
-
-            <div class="column" style="background-color:#ccc;" id="Recipe3" value="">
-                <h2>Recipe 3</h2>
-                <p></p>
-                <button id="recipe3View">Read more</button>
-                <button id="recipe3Mise">Let's Bake!</button>
-            </div>
-            <div class="column" style="background-color:#ddd;" id="Recipe4" value="">
-                <h2>Recipe 4</h2>
-                <p></p>
-                <button id="recipe4View">Read more</button>
-                <button id="recipe4Mise">Let's Bake!</button>
+                <button id="recipe2View" class="column.readMoreButton">Read more</button>
+                <button id="recipe2Mise" class="column.miseButton">Let's Bake!</button>
             </div>
 
-            <div class="column" style="background-color:#aaa;" id="Recipe5" value="">
-                <h2>Recipe 5</h2>
+            <div class="column" style="background-color:#ccc;" value="">
+                <div class="column.Title" id="Recipe3">Recipe 3</div>
                 <p></p>
-                <button id="recipe5View">Read more</button>
-                <button id="recipe5Mise">Let's Bake!</button>
+                <button id="recipe3View" class="column.readMoreButton">Read more</button>
+                <button id="recipe3Mise" class="column.miseButton">Let's Bake!</button>
             </div>
-            <div class="column" style="background-color:#bbb;" id="Recipe6" value="">
-                <h2>Recipe 6</h2>
+            <div class="column" style="background-color:#ddd;" value="">
+                <div class="column.Title" id="Recipe4">Recipe 4</div>
                 <p></p>
-                <button id="recipe6View">Read more</button>
-                <button id="recipe6Mise">Let's Bake!</button>
-            </div>
-
-            <div class="column" style="background-color:#ccc;" id="Recipe7" value="">
-                <h2>Recipe 7</h2>
-                <p></p>
-                <button id="recipe7View">Read more</button>
-                <button id="recipe7Mise">Let's Bake!</button>
-            </div>
-            <div class="column" style="background-color:#ddd;" id="Recipe8" value="">
-                <h2>Recipe 8</h2>
-                <p></p>
-                <button id="recipe8View">Read more</button>
-                <button id="recipe8Mise">Let's Bake!</button>
+                <button id="recipe4View" class="column.readMoreButton">Read more</button>
+                <button id="recipe4Mise" class="column.miseButton">Let's Bake!</button>
             </div>
 
-                <div class="column" style="background-color:#ccc;" id="Recipe9" value="">
-                <h2>Recipe 9</h2>
+            <div class="column" style="background-color:#aaa;" value="">
+                <div id="Recipe5" class="column.title">Recipe 5</div>
                 <p></p>
-                    <button id="recipe9View">Read more</button>
-                    <button id="recipe9Mise">Let's Bake!</button>
+                <button id="recipe5View" class="column.readMoreButton">Read more</button>
+                <button id="recipe5Mise" class="column.miseButton">Let's Bake!</button>
+            </div>
+            <div class="column" style="background-color:#bbb;" value="">
+                <div id="column.Title">Recipe 6</div>
+                <p></p>
+                <button id="recipe6View" class="column.readMoreButton">Read more</button>
+                <button id="recipe6Mise" class="column.miseButton">Let's Bake!</button>
+            </div>
+
+            <div class="column" style="background-color:#ccc;" value="">
+                <div id="Recipe7" class="column.title">Recipe 7</div>
+                <p></p>
+                <button id="recipe7View" class="column.readMoreButton">Read more</button>
+                <button id="recipe7Mise" class="column.miseButton">Let's Bake!</button>
+            </div>
+            <div class="column" style="background-color:#ddd;" value="">
+                <div id="Recipe8" class="column.title">Recipe 8</div>
+                <p></p>
+                <button id="recipe8View" class="column.readMoreButton">Read more</button>
+                <button id="recipe8Mise" class="column.miseButton">Let's Bake!</button>
+            </div>
+
+                <div class="column" style="background-color:#ccc;" value="">
+                <div id="Recipe9" class="column.title">Recipe 9</div>
+                <p></p>
+                    <button id="recipe9View" class="column.readMoreButton">Read more</button>
+                    <button id="recipe9Mise" class="column.miseButton">Let's Bake!</button>
                 </div>
-                <div class="column" style="background-color:#ddd;" id="Recipe10" value="">
-                <h2>Recipe 10</h2>
+                <div class="column" style="background-color:#ddd;" value="">
+                <div id="Recipe10" class="column.title">Recipe 10</div>
                 <p></p>
-                    <button id="recipe10View">Read more</button>
-                    <button id="recipe10Mise">Let's Bake!</button>
+                    <button id="recipe10View" class="column.readMoreButton">Read more</button>
+                    <button id="recipe10Mise" class="column.miseButton">Let's Bake!</button>
                 </div>
             </div>
         </div>
