Fixed grid and adjusted layout

--- a/index.html
+++ b/index.html
@@ -23,65 +23,65 @@
 
             <div class="wrapper">
             <div class="column" style="background-color:#aaa;" value="">
-                <div class="column.title" id="Recipe1">Recipe 1</div>
+                <div id="Recipe1">Recipe 1</div>
                 <p></p>
-                <button id="recipe1View" class="column.readMoreButton">Read more</button></div>
-                <button id="recipe1Mise" class="column.miseButton">Let's Bake!</button></div>
+                <button id="recipe1View" class="column.readMoreButton">Read more</button>
+                <button id="recipe1Mise" class="column.miseButton">Let's Bake!</button>
             </div>
             <div class="column" style="background-color:#bbb;" value="">
-                <div class="column.title" id="Recipe2">Recipe 2</div>
+                <div id="Recipe2">Recipe 2</div>
                 <p></p>
                 <button id="recipe2View" class="column.readMoreButton">Read more</button>
                 <button id="recipe2Mise" class="column.miseButton">Let's Bake!</button>
             </div>
 
             <div class="column" style="background-color:#ccc;" value="">
-                <div class="column.Title" id="Recipe3">Recipe 3</div>
+                <div id="Recipe3">Recipe 3</div>
                 <p></p>
                 <button id="recipe3View" class="column.readMoreButton">Read more</button>
                 <button id="recipe3Mise" class="column.miseButton">Let's Bake!</button>
             </div>
             <div class="column" style="background-color:#ddd;" value="">
-                <div class="column.Title" id="Recipe4">Recipe 4</div>
+                <div id="Recipe4">Recipe 4</div>
                 <p></p>
                 <button id="recipe4View" class="column.readMoreButton">Read more</button>
                 <button id="recipe4Mise" class="column.miseButton">Let's Bake!</button>
             </div>
 
             <div class="column" style="background-color:#aaa;" value="">
-                <div id="Recipe5" class="column.title">Recipe 5</div>
+                <div id="Recipe5">Recipe 5</div>
                 <p></p>
                 <button id="recipe5View" class="column.readMoreButton">Read more</button>
                 <button id="recipe5Mise" class="column.miseButton">Let's Bake!</button>
             </div>
             <div class="column" style="background-color:#bbb;" value="">
-                <div id="column.Title">Recipe 6</div>
+                <div id="Recipe6">Recipe 6</div>
                 <p></p>
                 <button id="recipe6View" class="column.readMoreButton">Read more</button>
                 <button id="recipe6Mise" class="column.miseButton">Let's Bake!</button>
             </div>
 
             <div class="column" style="background-color:#ccc;" value="">
-                <div id="Recipe7" class="column.title">Recipe 7</div>
+                <div id="Recipe7">Recipe 7</div>
                 <p></p>
                 <button id="recipe7View" class="column.readMoreButton">Read more</button>
                 <button id="recipe7Mise" class="column.miseButton">Let's Bake!</button>
             </div>
             <div class="column" style="background-color:#ddd;" value="">
-                <div id="Recipe8" class="column.title">Recipe 8</div>
+                <div id="Recipe8">Recipe 8</div>
                 <p></p>
                 <button id="recipe8View" class="column.readMoreButton">Read more</button>
                 <button id="recipe8Mise" class="column.miseButton">Let's Bake!</button>
             </div>
 
                 <div class="column" style="background-color:#ccc;" value="">
-                <div id="Recipe9" class="column.title">Recipe 9</div>
+                <div id="Recipe9">Recipe 9</div>
                 <p></p>
                     <button id="recipe9View" class="column.readMoreButton">Read more</button>
                     <button id="recipe9Mise" class="column.miseButton">Let's Bake!</button>
                 </div>
                 <div class="column" style="background-color:#ddd;" value="">
-                <div id="Recipe10" class="column.title">Recipe 10</div>
+                <div id="Recipe10">Recipe 10</div>
                 <p></p>
                     <button id="recipe10View" class="column.readMoreButton">Read more</button>
                     <button id="recipe10Mise" class="column.miseButton">Let's Bake!</button>
