Image added to preview screen and preliminary ingredient parsing functionality added

--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
         </div>
         </div>
 
-        <div id = "miseEnPlace" class="miseEnPlace">1/2 cup flour<br>
-            1/2 cup sugar<br>
-            1/2 cup butter<br>
+        <div id = "miseEnPlace" class="miseEnPlace">
+            <div id="ingredients">
+
+            </div>
             <button id="lockedAndLoadedButton">Go To Instructions</button>
         </div>
 
