--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <div id="header" class="header"><h1><div id="recipeTitle" class="recipeTitle">No Hands Baking!</div></h1></div>
     <p></p>
     <div class="footer"><div id="aboutUs" class="aboutUs">
-    <button class="aboutUsButton" id="aboutUsbutton">No Hands Baking</button></div></div>
+    <button class="aboutUsButton" id="aboutUsbutton">No Hands Baking</button>
+            <div class="sayMore" id="sayMore">As a baker and a coder, I know a thing or two about getting butter and flour all over your tech. 
+            That's why I created No Hands Baking, a tool which responds to voice commands and 
+            reads recipes to you while you're sifting, and rolling, and whisking. 
+            so that your hands can stay busy - the right way!</div>
+    </div></div>
 
         <div id="recipeSelector" class="opener">
             <p></p>
