Buttons completed and overall flow of application established

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div id="header" class="header"><h1><div id="recipeTitle" class="recipeTitle">No Hands Baking!</div></h1></div>
     <p></p>
     <div class="footer"><div id="aboutUs" class="aboutUs">
-    <button class="aboutUsButton" id="aboutUsbutton">No Hands Baking</button>
+    <button class="aboutUsButton" id="aboutUsButton">No Hands Baking</button>
             <div class="sayMore" id="sayMore">As a baker and a coder, I know a thing or two about getting butter and flour all over your tech. 
             That's why I created No Hands Baking, a tool which responds to voice commands and 
             reads recipes to you while you're sifting, and rolling, and whisking. 
@@ -102,7 +102,7 @@
         </div>
         </div>
 
-        <div id = "miseEnPlace" class="miseEnPlace">
+        <div id = "miseEnPlace" class="miseEnPlace" value="">
             <div id="ingredients">
 
             </div>
@@ -112,12 +112,8 @@
         
 
         <div id = "instructions" class="instructions">
-                <li class="instructionsVisible--container--list--item">1. Cream butter and sugar together.</li>
-                <li class="instructionsVisible--container--list--item">2. Add in flour.</li>
-                <li class="instructionsVisible--container--list--item">3. Probably add a liquid or something, it's giving very dry right now.</li>
-                <li class="instructionsVisible--container--list--item">4. Bake?</li>
-                <li class="instructionsVisible--container--list--item">5. Enjoy!</li>
-              </ul>
+            <div id = "instructionsText">
+            </div>
 
             <button id="previousStep">Previous</button>
             <button id="repeatStep">Repeat</button>
