Selection screen, next/previous pages buttons installed

--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
                     <button id="recipe10Mise" class="readMoreButton" value="">Let's Bake!</button>
                 </div>
             </div>
+
+            <button id="previousPage">Previous Page</button>
+            <div id="selectorPageTracker"></div>
+            <button id="nextPage">Next Page</button>
         </div>
 
         <div class="recipePreview" id="recipePreview">
