Tweaks from coaching session
Co-authored-by: Jillian Breau <jillianbreau@gmail.com>

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
+    <body>
+
     <div id="header" class="header"><h1><div id="recipeTitle" class="recipeTitle">No Hands Baking!</div></h1></div>
     <p></p>
-    <div class="footer"><div id="aboutUs" class="aboutUs">
+    <div class="footer" id="footer"><div id="aboutUs" class="aboutUs">
     <button class="aboutUsButton" id="aboutUsButton">No Hands Baking</button>
             <div class="sayMore" id="sayMore">As a baker and a coder, I know a thing or two about getting butter and flour all over your tech. 
             That's why I created No Hands Baking, a tool which responds to voice commands and 
@@ -15,11 +17,13 @@
             so that your hands can stay busy - the right way!</div>
     </div></div>
 
+    
+
         <div id="recipeSelector" class="opener">
             <p></p>
             What are we baking today?
 <p></p>
-                <input type="text" id="webpage" value="What do you want to bake?"> 
+                <input type="text" id="webpage" placeholder="What do you want to bake?"> 
 
                 <button id="letsGoButton">Search</button>
         </div>
@@ -125,5 +129,5 @@
         </div>
 
         <script src="index.js"></script>
-
+</body>
 </html>
