Fixed Page Numbers

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             <div class="columnPreview" id="ingredientsPreview"></div>
             <div class="columnPreview" id="instructionsPreview"></div>
         </div>
+        <button id="selectRecipe">Let's Bake!</button>
         </div>
 
         <div id = "miseEnPlace" class="miseEnPlace" value="">
