Added an abundance of back buttons, only remaining is back to home/search

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             <div class="columnPreview" id="ingredientsPreview"></div>
             <div class="columnPreview" id="instructionsPreview"></div>
         </div>
+        <button id="backToResults">Back to Results</button>
         <button id="selectRecipe">Let's Bake!</button>
         </div>
 
@@ -115,6 +116,7 @@
             <div id="ingredients">
 
             </div>
+            <button id="backToResults2">Back to Results</button>
             <button id="lockedAndLoadedButton">Go To Instructions</button>
         </div>
 
@@ -124,9 +126,12 @@
             <div id = "instructionsText">
             </div>
 
+            <button id="backToResults3">Back to Results</button>
+            <button id="backToMise">Back to Ingredients</button>
             <button id="previousStep">Previous</button>
             <button id="repeatStep">Repeat</button>
             <button id="nextStep">Next</button>
+            
         </div>
 
         <script src="index.js"></script>
