Slight alterations to about us animation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="header" class="header"><h1><div id="recipeTitle" class="recipeTitle">No Hands Baking!</div></h1></div>
     <p></p>
     <div class="footer" id="footer"><div id="aboutUs" class="aboutUs">
-    <button class="aboutUsButton" id="aboutUsButton">No Hands Baking</button>
+    <button class="aboutUsButton" id="aboutUsButton">No Hands Baking</button><p></p>
             <div class="sayMore" id="sayMore">As a baker and a coder, I know a thing or two about getting butter and flour all over your tech. 
             That's why I created No Hands Baking, a tool which responds to voice commands and 
             reads recipes to you while you're sifting, and rolling, and whisking. 
