Post-Coaching Commit
Co-authored-by: Jillian Breau (she/her) <jillianbreau@gmail.com>

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div id="header" class="header"><h1><div id="recipeTitle" class="recipeTitle">No Hands Baking!</div></h1></div>
     <p></p>
     <div class="footer" id="footer"><div id="aboutUs" class="aboutUs">
-    <button class="aboutUsButton" id="aboutUsButton">No Hands Baking</button><p></p>
-            <div class="sayMore" id="sayMore">As a baker and a coder, I know a thing or two about getting butter and flour all over your tech. 
+    <button class="aboutUsButton" id="aboutUsButton">No Hands Baking</button><br>
+            <div class="sayMore" id="sayMore"><p></p>As a baker and a coder, I know a thing or two about getting butter and flour all over your tech. 
             That's why I created No Hands Baking, a tool which responds to voice commands and 
             reads recipes to you while you're sifting, and rolling, and whisking. 
             so that your hands can stay busy - the right way!</div>
@@ -39,7 +39,6 @@
             </div>
             <div class="column" value="">
                 <div id="Recipe2">Recipe 2</div>
-                <p></p>
                 <button id="recipe2View" class="readMoreButton" value="">Read more</button>
                 <button id="recipe2Mise" class="readMoreButton" value="">Let's Bake!</button>
             </div>
