Home Button added, though not yet working successfully

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </head>
 
     <body>
+        <button id="backToHome" type="submit"><img id="homeButton" class= "homeButton" src='https://static.thenounproject.com/png/5566533-200.png'></button>
 
-    <div id="header" class="header"><h1><div id="recipeTitle" class="recipeTitle">No Hands Baking!</div></h1></div>
+    <div id="header" class="header">
+        <h1><div id="recipeTitle" class="recipeTitle">No Hands Baking!</div></h1></div>
     <p></p>
     <div class="footer" id="footer"><div id="aboutUs" class="aboutUs">
     <button class="aboutUsButton" id="aboutUsButton">No Hands Baking</button><br>
