Finished Home Button functionality

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                 </div>
             </div>
 
-            <button id="previousPage">Previous Page</button>
+            <button id="previousPage" class="pageButtons">Previous Page</button>
             <div id="selectorPageTracker"></div>
-            <button id="nextPage">Next Page</button>
+            <button id="nextPage" class="pageButtons">Next Page</button>
         </div>
 
         <div class="recipePreview" id="recipePreview">
