--- a/index.html
+++ b/index.html
@@ -98,10 +98,12 @@
                     <button id="recipe10Mise" class="readMoreButton" value="">Let's Bake!</button>
                 </div>
             </div>
-
-            <button id="previousPage" class="pageButtons">Previous Page</button>
-            <div id="selectorPageTracker"></div>
-            <button id="nextPage" class="pageButtons">Next Page</button>
+            
+            <div class="alignPageInfo">
+            <button id="previousPage" class="pageButtons" text-align="left">Previous Page</button>
+            <div id="selectorPageTracker" class="pageCounter"></div>
+            <button id="nextPage" class="pageButtons" text-align="right">Next Page</button>
+            </div>
         </div>
 
         <div class="recipePreview" id="recipePreview">
