Began working on selection screen flex box

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
 
             <div class="wrapper">
             <div class="column" value="">
-                <div id="Recipe1">Recipe 1</div>
-                <p></p>
+                <div id="Recipe1" class="recipeSelectionTitle">Recipe 1</div>
+                <div class="buttonWrangler" id="buttonWrangler">
                 <button id="recipe1View" class="readMoreButton" value="">Read more</button>
                 <button id="recipe1Mise" class="readMoreButton" value="">Let's Bake!</button>
+                </div>
             </div>
             <div class="column" value="">
                 <div id="Recipe2">Recipe 2</div>
@@ -100,15 +101,15 @@
             </div>
             
             <div class="alignPageInfo">
-            <button id="previousPage" class="pageButtons" text-align="left">Previous Page</button>
+            <button id="previousPage" class="pageButtons">Previous Page</button>
             <div id="selectorPageTracker" class="pageCounter"></div>
-            <button id="nextPage" class="pageButtons" text-align="right">Next Page</button>
+            <button id="nextPage" class="pageButtons">Next Page</button>
             </div>
         </div>
 
         <div class="recipePreview" id="recipePreview">
         <div class="rowPreview">
-            <div class="columnPreview" id="imagePreview"></div>
+            <div class="imageColumn" id="imagePreview"></div>
             <div class="columnPreview" id="ingredientsPreview"></div>
             <div class="columnPreview" id="instructionsPreview"></div>
         </div>
