Beginning flex build out of javascript

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div id="recipeSelectionScreen" class="recipeSelectionScreen">
 
             <div class="wrapper">
-            <div class="column" value="">
+            <!-- <div class="column" value="">
                 <div id="Recipe1" class="recipeSelectionTitle">Recipe 1</div>
                 <div class="buttonWrangler" id="buttonWrangler">
                 <button id="recipe1View" class="readMoreButton" value="">Read more</button>
@@ -98,8 +98,8 @@
                     <button id="recipe10View" class="readMoreButton" value="">Read more</button>
                     <button id="recipe10Mise" class="readMoreButton" value="">Let's Bake!</button>
                 </div>
-            </div>
-            
+             -->
+             </div>
             <div class="alignPageInfo">
             <button id="previousPage" class="pageButtons">Previous Page</button>
             <div id="selectorPageTracker" class="pageCounter"></div>
