--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div id="recipeSelectionScreen" class="recipeSelectionScreen">
 
-            <div class="wrapper">
+            <div class="wrapper" id="wrapper">
             <!-- <div class="column" value="">
                 <div id="Recipe1" class="recipeSelectionTitle">Recipe 1</div>
                 <div class="buttonWrangler" id="buttonWrangler">
