Implemented preliminary speech-to-text functionality
Co-authored-by: Jillian Breau (she/her) <jillianbreau@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     </head>
 
     <body>
-        <button id="backToHome" type="submit"><img id="homeButton" class= "homeButton" src='https://static.thenounproject.com/png/5566533-200.png'></button>
 
     <div id="header" class="header">
+        <button id="backToHome"><img id="homeButton" class="homeButton" src='https://static.thenounproject.com/png/5566533-200.png'></button>
         <h1><div id="recipeTitle" class="recipeTitle">No Hands Baking!</div></h1></div>
     <p></p>
     <div class="footer" id="footer"><div id="aboutUs" class="aboutUs">
@@ -27,7 +27,7 @@
             What are we baking today?
 <p></p>
                 <input type="text" id="webpage" placeholder="What do you want to bake?"> 
-
+                <button id="readTest">Read</button>
                 <button id="letsGoButton">Search</button>
         </div>
 
